# sovereign-titan-rust

./: .gitignore  Cargo.toml  build.rs  tauri.conf.json
capabilities/: default.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AutomationView.jsx  BackgroundTaskPanel.jsx  ChatView.jsx  ConsciousnessDialogue.jsx  ConsciousnessPanel.jsx  ConsciousnessView.jsx  MessageBubble.jsx  MessageInput.jsx  ModelBadge.jsx  ProfilePanel.jsx  SecurityAlertPanel.jsx  Sidebar.jsx  StatusIndicator.jsx  VoicePanel.jsx
frontend/src/hooks/: useChat.js  useConversations.js  useEventStream.js  useVoice.js  (+1 more)
src/: actors.rs  config.rs  event_bus.rs  ipc.rs  main.rs  messages.rs  nexus.rs
src/agent/: context.rs  dag.rs  distiller.rs  execution_paths.rs  mod.rs  prediction_capture.rs  prompt_compiler.rs  prose_recovery.rs  quality.rs  react.rs  skill_registry.rs  task_planner.rs  tone.rs  tool_memory.rs  verbosity.rs
src/api/: server.rs
src/autodidactic/: loader.rs
src/automation/: engine.rs
src/autonomous/: background.rs  mod.rs  runner.rs  types.rs
src/cognitive/: autonomy.rs  cognitive_threading.rs  consciousness.rs  consciousness_dialogue.rs  discovery.rs  gpu_scheduler.rs  inference_cache.rs  inner_monologue.rs  isolated_node.rs  metacognition.rs  mod.rs  novelty_gate.rs  quantum_layer.rs  reality.rs  request_dedup.rs  sandbox.rs  security_events.rs  security_response.rs  temporal_patterns.rs  thompson.rs  thought_quality.rs  truth.rs  working_memory.rs
src/computer_use/: mod.rs  ui_automation.rs
src/database/: base.rs  manager.rs  mod.rs  sqlite.rs
src/documents/: chunker.rs  mod.rs  parser.rs
src/email_calendar/: assistant.rs  mod.rs  providers.rs  types.rs
src/image_gen/: config.rs  generator.rs
src/knowledge/: graph.rs  mod.rs
src/mcp/: client.rs  manager.rs  mod.rs  types.rs
src/memory/: conversation.rs  ledger.rs  memory_manager.rs  mod.rs  session.rs  vector_store.rs
src/models/: speculative.rs
src/observability/: health_check.rs  metrics.rs  mod.rs  stack.rs  structured_logging.rs
src/persona/: engine.rs
src/physics/: holographic_memory.rs  inference.rs  metabolism.rs  mod.rs
src/plugins/: base.rs  manager.rs  metadata.rs  mod.rs
src/routing/: classifier.rs  mod.rs  router.rs
src/safety/: adversarial.rs  health.rs  immune.rs  mod.rs
src/security/: dns.rs  ids.rs  mod.rs  network_monitor.rs  policy.rs  port_scanner.rs  traffic.rs
src/self_improvement/: change_log.rs  engine.rs  mod.rs  proposals.rs  types.rs
src/sources/: clients.rs  mod.rs  overrides.rs  registry.rs  topic_detector.rs
src/system/: app_discovery.rs  mod.rs
src/tools/: academic_search.rs  advanced_research.rs  api_search.rs  audio_control.rs  browser_interact.rs  calculator.rs  claude_code.rs  clipboard.rs  clock.rs  code.rs  computer_use.rs  container_tools.rs  document_create.rs  external_ai.rs  file_ops.rs  file_search.rs  media.rs  media_processing.rs  mod.rs  network_tools.rs  os_browser.rs  preflight.rs  pro_document.rs  process_manager.rs  rag.rs  schemas.rs  screen_capture.rs  screen_interact.rs  shell.rs  software_control.rs  system_control.rs  system_map.rs  text_transform.rs  web.rs  window_control.rs  workspace_chunk.rs
src/user/: mod.rs  profile.rs
src/vision/: engine.rs  mod.rs
src/voice/: interface.rs  mod.rs  stt.rs  tts.rs
src/warden/: etw.rs  mod.rs  network.rs  response.rs  sensors.rs
src/workflows/: engine.rs  mod.rs
(+18 files in other folders)
