[package]
name = "titan_core"
version = "0.1.0"
edition = "2024"
description = "Sovereign Titan — Rust bare-metal orchestrator (Project TitanOS)"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
llama-cpp-2 = { version = "0.1", features = ["rocm"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
encoding_rs = "0.8.35"
async-trait = "0.1"
walkdir = "2"
regex = "1"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Time",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
] }
