[package]
name = "titan_core"
version = "0.1.0"
edition = "2024"
description = "Sovereign Titan — Rust bare-metal orchestrator (Project TitanOS)"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
llama-cpp-2 = { version = "0.1", features = ["rocm"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
encoding_rs = "0.8.35"
async-trait = "0.1"
walkdir = "2"
regex = "1"
fancy-regex = "0.14"
chrono = "0.4"
open = "5"
reqwest = { version = "0.11", features = ["json"] }
tauri = { version = "2", features = [] }
rusqlite = { version = "0.31", features = ["bundled"] }
petgraph = "0.6"
uuid = { version = "1.8", features = ["v4", "fast-rng"] }
aes-gcm = "0.10"
rand = "0.8"
enigo = "0.2.1"
headless_chrome = "1.0"
pdf-extract = "0.7"
zip = "2"
sysinfo = "0.30"
pnet = "0.34"
strsim = "0.11"
clipboard-win = "5"
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
nalgebra = "0.33"
num-complex = "0.4"
dirs-next = "2.0"

[[bin]]
name = "titan_worker"
path = "src/bin/titan_worker.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Time",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
] }
